--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,8 @@ body {
 .sidebar-closed .content {
     margin-left: 0; /* Adjusted for sidebar closed */
 }
+
+mark {
+    padding: 0;
+    background-color: rgb(212, 233, 25); /* bg-yellow-200 */
+}
